2002-03-24  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Made necessary modifications to change the
	classesView from an NSTableView to an NSOutlineView.
	* GormClassManager.m: Added method to return all subclasses for
	a given superclass.
	* GormClassManager.h: Added declaration for the method described
	above.
		
2002-03-08  Richard Frith-Macdonald <rfm@gnu.org>

	* IBInspector.m: Don't release window on dealloc ... assume it
	* releases itsself when closed.
	* IBPalette.m: ditto

2002-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* IBInspector.m: Release all ivars on dealloc.
	* IBPalette.m: ditto
	* Palettes/0Menus/GormMenuInspectors.m: Don't release superclass
	ivars in own dealloc method.
	* Palettes/1Windows/main.m: ditto
	* Palettes/2Controls/inspectors.m: ditto
	* Palettes/3Containers/inspectors.m: ditto
	* Palettes/3Containers/main.m: ditto
	* Palettes/4Data/inspectors.m: ditto
	Changes to make retain/release consistent ... subclasses must not
	release the ivars of a superclass in their dealloc method as the
	superclass dealloc method should do that. Fixes bug exposed by
	recent NSWindow dealloc fixes.

2002-03-04  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Gorm.m ([GormObjectProxy -initWithCoder:]): 
	typo fixing.

2002-03-04  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Gorm.m ([GormObjectProxy -initWithCoder:]): 
	updated to conform with GSNibItem new encoding scheme.

2002-03-01  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* GormCustomView.m ([GormCustomView -classForCoder]): 
	new method. Easy way to make sure GormCustomView is always
	encoded as a GSCustomView.
	* GormCustomView.m ([GormCustomView -initWithCoder:]): 
	([GormCustomView -encodeWithCoder:]): 
	new encoding (works with the new GSCustomView encoding),
	ability to open old documents.
	* GormDocument.m: 
	([GormDocument -pasteType:fromPasteboard:parent:]): 
	decode GSCustomView as GormCustomView.

2002-02-18  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
